Add more on containers

--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,7 @@ Docker Images are read-only binary files that are used to build containers \cite
 
 \subsubsection{Docker Containers}
 
-Docker Containers are isolated environments that run applications \citep{aquasec:docker_architecture}. The container contains all the necessary dependencies that are required for running the application. Running containers are isolated from other containers and also have good isolation from the host machine \citep{docker:security}. Containers can be connected to networks and storage and in this way, the isolation to the host machine can be configured.
+Docker Containers are isolated environments that run applications \citep{aquasec:docker_architecture}. The container contains all the necessary dependencies that are required for running the application. Running containers are isolated from other containers and also have good isolation from the host machine \citep{docker:security}. Containers are temporary and once they are deleted all the data within the container will disappear. Containers can be connected to networks and storage and in this way, the isolation to the host machine can be configured and data can be stored in a persistent way.
 
 \subsubsection{Docker Networking}
 
