Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -163,8 +163,8 @@ Docker Desktop for Windows uses the Windows Subsystem for Linux 2 (WSL2) or Hype
 
 For managing multiple containers in production you can use a container orchestration framework \citep{circleci:swarm_kubernetes}. The most common orchestration framework tools are Docker Swarm and Kubernetes. Orchestration tools provide some important features, for example, load balancing, scaling, availability, and self-healing of containers. Compared to Kubernetes, Docker Swarm is more lightweight but has fewer features. With the use of orchestration frameworks, you have less to worry about when having your software architecture deployed in production.
 
-[Docker orchestration / Kubernetes / Docker swarm]
-
+\section{Conlusion}
+Coming soon
 \bibliography{sample}
 
 \end{document}
