Updates from Overleaf

--- a/sample.bib
+++ b/sample.bib
@@ -139,6 +139,25 @@ series = {XP '16 Workshops}
   note = "[Online; accessed 27-February-2022]"
 }
 
+@misc{docker:compose-overview,
+  author = {Docker},
+  title = "Overview of Docker Compose",
+  year = "2022",
+  howpublished = {\url{https://docs.docker.com/compose/}},
+  note = "[Online; accessed 10-March-2022]"
+}
+
+@misc{aquasec:docker-security-best-practices,
+  author = {Osnat, R.},
+  title = "Top 20 Docker Security Best Practices: Ultimate Guide",
+  year = "2022",
+  howpublished = {\url{https://blog.aquasec.com/docker-security-best-practices}},
+  note = "[Online; accessed 10-March-2022]"
+}
+
+https://blog.aquasec.com/docker-security-best-practices
+
+
 
 
 
